# flywheel

./: .gitignore  README.md  pyproject.toml
SNR_timeseries/: SNRtsCompute.py  SNRtsGlobals.py  SNRtsUtils.py  compute_mode_snr_ratios_from_catalog.py  compute_snrts_from_catalog.py  waveforms.py
data/example/: README.md
data/example/mode_ratios/: sampled_GW190814_median_params_L1-H1-Virgo_O5_LAL-IMRPhenomXHM.h5  snrs_22_L1_0_to_5000.txt  snrs_33_L1_0_to_5000.txt  snrs_44_L1_0_to_5000.txt
data/example/snr_timeseries/: detected_events_0_to_1.hdf5  snrs_opt_info_0_to_1.hdf5  snrs_timeseries_0_to_1.hdf5
examples/: generate_snr_timeseries.ipynb  low_latency_pe.ipynb  low_latency_pe.py
scripts/: run_snr_timeseries_smoke_test.py
src/flywheel/: __init__.py  coherent_score.py  io.py  mode_ratios.py  workflow.py
